Kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapi
spec:
  selector:
    matchLabels:
      run: kubeapi
  replicas: 1
  template:
    metadata: 
      labels:
        run: kubeapi
    spec:
      containers:
      - name: kubeapi
        image: krystiankolad/kube.api
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: kubeapi
  labels:
    run: kubeapi
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    run: kubeapi
  type: LoadBalancer
