Kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      run: mongodb
  replicas: 1
  template:
    metadata: 
      labels:
        run: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:3.2.20-jessie
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    run: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    run: mongodb
